# cudaLectures

cudaBasic/: CMakeLists.txt
cudaBasic/0_3_cppPrerequisites/: CMakeLists.txt
cudaBasic/0_4_helloCUDA/: CMakeLists.txt  cpuCode.cpp  cudaCode.cu
cudaBasic/0_5_cudaSyntax/: CMakeLists.txt  cudaAdd100.cu
cudaBasic/0_6_addVecs/: CMakeLists.txt
cudaBasic/0_7_modernCPP/: CMakeLists.txt  addVecsModern.cu
cudaBasic/0_8_cudaCheckErr/: CMakeLists.txt  cudaAdd100Err.cu
cudaBasic/0_9_cudaDeviceCheck/: CMakeLists.txt  deviceCheck.cu
cudaBasic/1_0_imgInvert/: CMakeLists.txt  imgInvert.cu
cudaBasic/1_1_grayImg/: CMakeLists.txt  grayImg.cu
cudaBasic/1_2_verticalFlip/: CMakeLists.txt  verticalFlip.cu
cudaBasic/1_3_blockSample/: CMakeLists.txt  add100Basic.cu  add100Blocks.cu
cudaBasic/1_4_blockReal/: CMakeLists.txt  add100real.cu
cudaBasic/1_5_blockDeviceCheck/: CMakeLists.txt
cudaBasic/1_5_deviceCheck/: deviceCheck.cu
cudaBasic/1_6_block2D/: CMakeLists.txt  block2DGrayscale.cu
cudaBasic/1_6_block2DGray/: CMakeLists.txt  block2DGrayscale.cu
cudaBasic/1_7_block2DBlur/: CMakeLists.txt  block2DBlur.cu
