cmake_minimum_required(VERSION 3.31)
project(CudaBasics LANGUAGES CXX CUDA)

enable_testing()

add_subdirectory(0_3_cppPrerequisites)
add_subdirectory(0_4_helloCUDA)
add_subdirectory(0_5_cudaSyntax)
add_subdirectory(0_6_addVecs)
add_subdirectory(0_7_modernCPP)
add_subdirectory(0_8_cudaCheckErr)
add_subdirectory(0_9_cudaDeviceCheck)
add_subdirectory(1_0_imgInvert)
add_subdirectory(1_1_grayImg)
add_subdirectory(1_2_verticalFlip)
add_subdirectory(1_3_blockSample)
add_subdirectory(1_4_blockReal)
add_subdirectory(1_5_blockDeviceCheck)
add_subdirectory(1_6_block2DGray)
add_subdirectory(1_7_block2DBlur)